Hero Splash animated 'Learn more' button completed.

--- a/src/components/hero/Hero.styles.scss
+++ b/src/components/hero/Hero.styles.scss
@@ -13,9 +13,13 @@
     width: 100%;
   }
 
-  .logo {
-    width: 40px;
-    height: auto;
+  .logo-container {
+    text-align:left;
+    padding: 20px;
+    .logo {
+      width: 50px;
+      height: auto;
+    }
   }
 
   .hero-heading-container {
@@ -23,23 +27,90 @@
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+
+    .btn:link, .btn:visited {
+      text-transform: uppercase;
+      text-decoration: none;
+      padding: 15px 40px;
+      border-radius: 100px;
+      display: inline-block;
+      transition: all 0.2s;
+      position: relative;
+
+      &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        &::after {
+          transform: scaleX(1.4) scaleY(1.6);
+          opacity: 0;
+        }
+      }
+
+      &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      &::after {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 100px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all 0.4s;
+      }
+    }
+
+    .btn-animated {
+      animation: slideFromBottom .5s ease-out .75s;
+      animation-fill-mode: backwards;
+    }
+
+    @keyframes slideFromBottom {
+      0% {
+        opacity: 0;
+        transform: translateY(100px);
+      }
+      80% {
+        transform: translateY(-10px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .btn-white {
+      background-color: #ffffff;
+      &::after {
+        background-color: inherit!important;
+      }
+    }
 
     .hero-heading {
       color: #ffffff;
       text-transform: uppercase;
       font-weight: 400;
+      backface-visibility: hidden;
+
       &-primary {
         display: block;
         font-size: 60px;
         letter-spacing: 25px;
-        animation: slideFromLeft 2s forwards;
+        animation: slideFromLeft 2s ease-out;
       }
 
       &-sub {
         display: block;
         font-size: 20px;
         letter-spacing: 15px;
-        animation: slideFromRight 2s forwards;
+        animation: slideFromRight 2s ease-out;
+        margin-bottom: 60px;
       }
 
       @keyframes slideFromLeft {
@@ -48,7 +119,7 @@
           transform: translateX(-100px);
         }
         80% {
-          transform: translateX(20px);
+          transform: translateX(10px);
         }
         100% {
           opacity: 1;
@@ -62,7 +133,7 @@
           transform: translateX(100px);
         }
         80% {
-          transform: translateX(-20px);
+          transform: translateX(-10px);
         }
         100% {
           opacity: 1;
