Updated Hero component styles.

--- a/src/components/hero/Hero.styles.scss
+++ b/src/components/hero/Hero.styles.scss
@@ -88,7 +88,7 @@
     .btn-white {
       background-color: #ffffff;
       &::after {
-        background-color: inherit!important;
+        background-color: inherit;
       }
     }
 
