--- a/src/_assets/css/_mixins.scss
+++ b/src/_assets/css/_mixins.scss
@@ -16,7 +16,7 @@ $gray-splash: #777777;
 
 @mixin style-link-text($color) {
   font-size: 1.6rem;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   border-radius: 10rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -25,8 +25,8 @@ $gray-splash: #777777;
 
 
 %btn-placeholder {
-  padding: 15px 40px;
-  border-radius: 100px;
+  padding: 1.5rem 4rem;
+  border-radius: 10rem;
   display: inline-block;
   transition: all 0.2s;
   position: relative;
