--- a/src/components/navbar/Navbar.styles.scss
+++ b/src/components/navbar/Navbar.styles.scss
@@ -16,7 +16,7 @@
     .logo-title {
       height: 100%;
       display: inline-block;
-      font-size: 30px;
+      font-size: 3rem;
       font-weight: bold;
       @media only screen and (max-width: 600px) {
         display: none;
