--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -9,14 +9,14 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 10px;
 }
 body {
   color: $primary-body-color;
-  // font-size: 16px;
+  font-size: 1rem;
   line-height: 1.7;
   font-weight: 400;
-  // padding: 3rem;
+  padding: 3rem;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
