--- a/src/pages/homepage/Homepage.styles.scss
+++ b/src/pages/homepage/Homepage.styles.scss
@@ -1,5 +1,5 @@
+@import '../../_assets/css/_mixins.scss';
+
 #homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include responsive-page;
 }
