Implemented custom grid system.

--- a/src/_assets/css/abstracts/_mixins.scss
+++ b/src/_assets/css/abstracts/_mixins.scss
@@ -7,9 +7,9 @@
 }
 
 @mixin responsive-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
 }
 
 @mixin style-link-text($color) {
