--- a/src/pages/homepage/Homepage.styles.scss
+++ b/src/pages/homepage/Homepage.styles.scss
@@ -1,4 +1,4 @@
-@import '../../_assets/css/_mixins.scss';
+@import '../../_assets/css/abstracts/_mixins.scss';
 
 #homepage {
   @include responsive-page;
