Custom grid built. About section component started.

--- a/src/_assets/css/abstracts/_variables.scss
+++ b/src/_assets/css/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $brand-color-light: lighten($brand-color, 5%);
 $color-black: #000000;
 $color-white: #ffffff;
 $gray-splash: #777777;
+$gray-back-splash: #f7f7f7;
 $loader-splash: #f3f3f3;
 
 // grid
