--- a/src/_assets/css/base/_typography.scss
+++ b/src/_assets/css/base/_typography.scss
@@ -7,3 +7,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.heading-secondary {
+  display: inline-block;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(to right, $brand-color, $brand-color-dark);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all 0.4s ease-out;
+
+  &:hover {
+    transform: skewY(2deg);
+  }
+}
