--- a/src/components/about-card/AboutCard.styles.scss
+++ b/src/components/about-card/AboutCard.styles.scss
@@ -1,1 +1,9 @@
 @import '../../_assets/css/layout/_grid.scss';
+@import '../../_assets/css/abstracts/_variables.scss';
+@import '../../_assets/css/base/_typography.scss';
+
+.about {
+  background-color: $gray-back-splash;
+  padding: 25rem 0;
+  margin-top: -20vh;
+}
