About Section additions. Grid implemented. Abstracted default font sizes and new button.

--- a/src/_assets/css/abstracts/_variables.scss
+++ b/src/_assets/css/abstracts/_variables.scss
@@ -10,6 +10,10 @@ $gray-splash: #777777;
 $gray-back-splash: #f7f7f7;
 $loader-splash: #f3f3f3;
 
+// font sizes
+
+$default-font-size: 1.6rem;
+
 // grid
 
 $grid-width: 114rem;
