--- a/src/components/about-card/AboutCard.styles.scss
+++ b/src/components/about-card/AboutCard.styles.scss
@@ -1,9 +1,11 @@
 @import '../../_assets/css/layout/_grid.scss';
 @import '../../_assets/css/abstracts/_variables.scss';
+@import '../../_assets/css/components/_button.scss';
 @import '../../_assets/css/base/_typography.scss';
+@import '../../_assets/css/utilities/_utilities.scss';
 
 .about {
   background-color: $gray-back-splash;
-  padding: 25rem 0;
+  padding: 25rem 3rem;
   margin-top: -20vh;
 }
