--- a/src/_assets/css/components/_button.scss
+++ b/src/_assets/css/components/_button.scss
@@ -53,10 +53,10 @@
 .btn-text {
   &:link,
   &:visited {
-    color: $primary-body-color;
+    color: $brand-color-dark;
     display: inline-block;
     text-decoration: none;
-    border-bottom: .1rem solid $primary-body-color;
+    border-bottom: .1rem solid $brand-color-dark;
     padding: 1rem;
     font-size: $default-font-size;
     transition: all 0.4s;
