--- a/src/_assets/css/utilities/_utilities.scss
+++ b/src/_assets/css/utilities/_utilities.scss
@@ -1,4 +1,4 @@
-.center-text { text-align: center; }
+.center-text { text-align: center; align-items: center;}
 .left-text { text-align: left; }
 .margin-top-s { margin-top: 2rem; }
 .margin-top-m { margin-top: 4rem; }
