--- a/src/components/features/Features.styles.scss
+++ b/src/components/features/Features.styles.scss
@@ -1,10 +1,18 @@
 @import '../../_assets/css/components/_feature-card.scss';
 @import '../../_assets/css/abstracts/_variables.scss';
+@import '../../_assets/css/utilities/_utilities.scss';
+@import '../../_assets/css/vendors/icon-font.css';
 
 .section-features {
-  padding: 20rem 0;
+  margin: -20vh 0;
+  padding: 20rem 4rem;
   background-image:
     linear-gradient(to right bottom, rgba($brand-color, 0.6), rgba($brand-color-dark, 0.6)),
     url('../../_assets/img/dog-4.jpg');
   background-size: cover;
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
 }
