Set up for Rescues section. Card components section set up.

--- a/src/components/features/Features.styles.scss
+++ b/src/components/features/Features.styles.scss
@@ -4,7 +4,7 @@
 @import '../../_assets/css/vendors/icon-font.css';
 
 .section-features {
-  margin: -20vh 0;
+  margin: -10rem auto;
   padding: 20rem 4rem;
   background-image:
     linear-gradient(to right bottom, rgba($brand-color, 0.6), rgba($brand-color-dark, 0.6)),
