Adjusting sass structure.

--- a/src/components/about-card/AboutCard.styles.scss
+++ b/src/components/about-card/AboutCard.styles.scss
@@ -1,8 +1,4 @@
-@import '../../_assets/css/layout/_grid.scss';
-@import '../../_assets/css/abstracts/_variables.scss';
-@import '../../_assets/css/components/_button.scss';
-@import '../../_assets/css/base/_typography.scss';
-@import '../../_assets/css/utilities/_utilities.scss';
+@import '../../_assets/css/main.scss';
 
 .about {
   background-color: $gray-back-splash;
