--- a/src/components/features/Features.styles.scss
+++ b/src/components/features/Features.styles.scss
@@ -1,7 +1,4 @@
-@import '../../_assets/css/components/_feature-card.scss';
-@import '../../_assets/css/abstracts/_variables.scss';
-@import '../../_assets/css/utilities/_utilities.scss';
-@import '../../_assets/css/vendors/icon-font.css';
+@import '../../_assets/css/main.scss';
 
 .section-features {
   margin: -10rem auto;
