--- a/src/components/rescues/Rescues.styles.scss
+++ b/src/components/rescues/Rescues.styles.scss
@@ -1,9 +1,4 @@
-@import '../../_assets/css/layout/_grid.scss';
-@import '../../_assets/css/abstracts/_variables.scss';
-@import '../../_assets/css/components/_button.scss';
-@import '../../_assets/css/components/_image-gallery.scss';
-@import '../../_assets/css/base/_typography.scss';
-@import '../../_assets/css/utilities/_utilities.scss';
+@import '../../_assets/css/main.scss';
 
 .section-rescues {
   margin: -10rem auto;
